<resources>
    <string name="app_name">Practical6</string>
    <string name="flag">Flag</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="smoker">Smoker?</string>
    <string name="premium">Premium</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string-array name="age_group">
        <item>Less Than 5</item>
        <item>5 to 10</item>
        <item>11 to 16</item>
        <item>17 to 20</item>
        <item>21 to 30</item>
        <item>31 to 40</item>
        <item>41 to 50</item>
        <item>More Than 50</item>
    </string-array>
</resources>
